@@ -1,4 +1,4 @@
-// modinfo for basedata.sdz
+// modinfo for bitmaps.sdz
 
 [MOD]
 {
@@ -6,8 +6,9 @@
 	Description=Various bitmaps used by spring;
 	ModType=0;
 
-	NumReplaces=2;
+	NumReplaces=3;
 	Replace0=springdecals_v062.sdz;
 	Replace1=springbitmaps_v061.sdz;
+	Replace2=springdecals_v061.sdz;
 }
 
