@@ -1,12 +1,12 @@
 
 !ifdef TEST_BUILD
 !define PRODUCT_NAME "TA Spring - Testing"
-!define PRODUCT_VERSION "0.71b2"
+!define PRODUCT_VERSION "0.72b1"
 !define PRODUCT_PUBLISHER "The Spring team"
 !define PRODUCT_WEB_SITE "http://spring.clan-sy.com"
 !else
 !define PRODUCT_NAME "TA Spring"
-!define PRODUCT_VERSION "0.71b1"
+!define PRODUCT_VERSION "0.72b1"
 !define PRODUCT_PUBLISHER "The TA Spring team"
 !define PRODUCT_WEB_SITE "http://spring.clan-sy.com"
 !endif
