@@ -1,7 +1,7 @@
 #ifndef GAMEVERSION_H
 #define GAMEVERSION_H
 
-#define VERSION_STRING "0.71b1"
+#define VERSION_STRING "0.72b1"
 
 #define MOD_FILE "xtape.sd7"
 
